<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_of_tolls"
    android:background="@color/colorMainGray">

    <RelativeLayout
        android:id="@+id/view_zfb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pay_money"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@id/textView9"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/ic_qrcode" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_use_zfb"
            android:textColor="@color/colorBlue"
            android:textSize="25sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:id="@+id/pay_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/btn_to_wx"
        android:layout_centerHorizontal="true"
        android:text="@string/pay_num"
        android:textAlignment="center"
        android:textColor="@color/colorSmallBlack"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_to_wx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_pay_finish"
        android:layout_marginBottom="@dimen/margin_of_tolls"
        android:text="@string/change_use_wx"
        android:background="@drawable/btn_green_px21"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_pay_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/pay_finish"
        android:background="@drawable/btn_blue_px21"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <RelativeLayout
        android:id="@+id/view_wx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pay_money"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@id/textView10"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/ic_qrcode_wx" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_use_wx"
            android:textColor="@color/wx_green"
            android:textSize="25sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <Button
        android:id="@+id/btn_to_zfb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_pay_finish"
        android:layout_marginBottom="@dimen/margin_of_tolls"
        android:background="@drawable/btn_blue_px21"
        android:text="@string/change_use_zfb"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

</RelativeLayout>