<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ecar.MainActivity"
    android:background="@color/colorMainGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorBlue"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/avatar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/avatar" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginTop="-55dp"
        android:layout_marginStart="@dimen/margin_horizon"
        android:layout_marginEnd="@dimen/margin_horizon"
        android:background="@drawable/white_bg"
        android:orientation="horizontal">
        <!--订单总数-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/num_wait_for_confirm"
                android:textColor="@color/colorBlue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wait_for_confirm"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16.5sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/total_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/num_total_order"
                android:textColor="@color/colorBlue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/total_order"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16.5sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/finished_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/num_finished"
                android:textColor="@color/colorBlue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/finished"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16.5sp" />
        </LinearLayout>

        <!--待确认数-->
        <!--已完成数-->
    </LinearLayout>

    <include
        layout="@layout/item_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_horizon"
        android:layout_marginEnd="@dimen/margin_horizon"/>
</LinearLayout>