<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/white_bg"
    android:layout_marginBottom="10dp">

    <ImageView
        android:id="@+id/smallAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/avatar" />

    <TextView
        android:id="@+id/car_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/smallAvatar"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/smallAvatar"
        android:text="@string/car_type"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/state_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/smallAvatar"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/smallAvatar"
        android:text="@string/state_of_car_inf"
        android:textColor="@color/colorSmallBlack"
        android:textSize="12.5sp" />

    <TextView
        android:id="@+id/countdown_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:text="@string/countdown"
        android:textColor="@color/colorBlack"
        android:textSize="12.5sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/order_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:text="" />

</RelativeLayout>