<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_of_tolls"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/gray_bg">

        <LinearLayout
            android:id="@+id/layout_takephoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_takephoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_add_pic" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/add_photo"
                android:textAlignment="center"
                android:textColor="@color/add_photo"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/pic_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@null" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_of_tolls"
        android:layout_marginBottom="@dimen/margin_of_tolls">

        <EditText
            android:id="@+id/text_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_of_tolls"
            android:background="@drawable/gray_bg"
            android:ems="10"
            android:hint="@string/tolls_hint"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@id/btnGroup"
            />

        <FrameLayout
            android:id="@+id/btnGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/btn_blue_px21"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:visibility="gone" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/btn_red_px21"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="invisible"
                tools:visibility="visible" />
        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@id/btn_submit"
            android:layout_marginBottom="@dimen/margin_of_tolls">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photo_item_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_of_tolls" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/submit"
            android:background="@drawable/btn_blue_px21"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </RelativeLayout>

</LinearLayout>