<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="68dp">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:elevation="10dp"
        android:background="@color/white"
        >

        <RadioGroup
            android:id="@+id/radiogroup_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/home_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/ic_homepage_style"
                android:drawablePadding="-7dp"
                android:gravity="center"
                android:text="@string/homepage"
                android:textAlignment="center"
                android:textColor="@color/radiobutton_textcolor_bottom"
                android:textSize="12.5sp" />

            <RadioButton
                android:id="@+id/navi_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@drawable/ic_navi_style"
                android:drawablePadding="-7dp"
                android:gravity="center"
                android:text="@string/navigation"
                android:textAlignment="center"
                android:textColor="@color/radiobutton_textcolor_bottom"
                android:textSize="12.5sp" />

            <RadioButton
                android:id="@+id/me_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@drawable/ic_me_style"
                android:drawablePadding="-7dp"
                android:gravity="center"
                android:text="@string/me"
                android:textAlignment="center"
                android:textColor="@color/radiobutton_textcolor_bottom"
                android:textSize="12.5sp" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>